[api-doc] user 관련 api 구현
